# pentadsolver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: auto-cmake-format.yml
benchmarks/: CMakeLists.txt  performance_test.cpp  performance_test.cu
benchmarks/cpu/: CMakeLists.txt  my_bm.cpp
benchmarks/cuda/: CMakeLists.txt  my_bm.cu
include/: pentadsolver.hpp  pentadsolver_cuda.hpp  pentadsolver_handle.hpp  pentadsolver_util.hpp
include/util/: cuda_util.hpp  device_mesh.hpp  mesh.hpp
src/: CMakeLists.txt
src/cpu/: CMakeLists.txt  pentad_cpu.cpp
src/cpu/mpi/: pentad_cpu.cpp  pentadsolver_handle.cpp
src/cpu/singlenode/: pentad_cpu.cpp
src/cuda/: CMakeLists.txt  pentad_cuda.cu
src/cuda/mpi/: pentad_cuda.cu  pentad_hip.cpp
src/cuda/singlenode/: pentad_cuda.cu  pentad_hip.cpp
test/: CMakeLists.txt  catch_utils.hpp  cuda_utils.hpp  gen_testcases.py  tests.cpp  utils.hpp
test/cpu/: CMakeLists.txt  tests.cpp
test/cpu/mpi/: catch_mpi_outputs.hpp  mpi_main.cpp  tests.cpp
test/cpu/singlenode/: tests.cpp
test/cuda/: CMakeLists.txt  cuda_tests.cu
test/cuda/mpi/: catch_mpi_outputs.hpp  cuda_tests.cpp  cuda_tests.cu  mpi_main.cpp
test/cuda/singlenode/: cuda_tests.cpp  cuda_tests.cu
